--- a/pages/add-employee.html
+++ b/pages/add-employee.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Employee</title>
-    <!-- Font -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <!-- External CSS -->
     <link rel="stylesheet" href="../css/addEmployee.css" />
+    <link rel="stylesheet" href="../css/Home.css" />
+    <title>Add Employee</title>
   </head>
   <body>
-    <!-- Header -->
+    <!-- uc1 -->
     <header class="header-content header">
-      <div class="logo-content" onclick="location.href='./index.html'">
+      <div class="logo-content" onclick="location.href='./Home.html'">
         <img src="../assets/images/logo.png" alt="Logo" />
         <div>
           <span class="emp-text">EMPLOYEE</span><br />
@@ -25,13 +24,15 @@
       </div>
     </header>
 
-    <!-- Form -->
+    <!-- uc2 -->
     <div class="form-content">
-      <form class="form" action="#">
-        <!-- Form header -->
+      <form
+        class="form"
+        action="#"
+        onsubmit="save(event);return false"
+        onreset="resetForm()"
+      >
         <div class="form-head">Employee Payroll Form</div>
-
-        <!-- Input fields: Name -->
         <div class="row-content">
           <label for="name" class="label text">Name</label>
           <input
@@ -42,9 +43,11 @@
             placeholder="Your name.."
             required
           />
+          <!-- uc10 -->
+          <error-output class="text-error" for="text"></error-output>
         </div>
 
-        <!-- Input fields: Profile pic -->
+        <!-- uc3 start -->
         <div class="row-content">
           <label for="profile" class="label text">Profile Image</label>
           <div class="profile-radio-content">
@@ -105,12 +108,15 @@
               />
             </label>
           </div>
-          <!-- Input fields: Gender-->
+        </div>
+        <!-- uc3 end -->
+
+        <!-- uc4 start-->
         <div class="row-content" style="margin-top: 30px">
           <label class="label text" for="gender">Gender</label>
-          <div class="gender-label">
+          <div>
             <input type="radio" id="male" name="gender" value="Male" required />
-            <label for="Male">Male</label>
+            <label for="Male" style="margin-right: 28px">Male</label>
             <input
               type="radio"
               id="female"
@@ -122,7 +128,6 @@
           </div>
         </div>
 
-        <!-- Input fields: Department -->
         <div class="row-content" style="margin-top: 30px">
           <label class="label text" for="department">Department</label>
           <div>
@@ -134,6 +139,7 @@
               style="margin-right: 6px"
             />
             <label class="text" for="hr" style="margin-right: 20px">HR</label>
+
             <input
               type="checkbox"
               id="sales"
@@ -144,6 +150,7 @@
             <label class="text" for="sales" style="margin-right: 20px"
               >Sales</label
             >
+
             <input
               type="checkbox"
               id="finance"
@@ -154,6 +161,7 @@
             <label class="text" for="finance" style="margin-right: 20px"
               >Finance</label
             >
+
             <input
               type="checkbox"
               id="engineer"
@@ -164,6 +172,7 @@
             <label class="text" for="engineer" style="margin-right: 20px"
               >Engineer</label
             >
+
             <input
               type="checkbox"
               id="others"
@@ -177,9 +186,9 @@
           </div>
         </div>
 
-        <!-- Input fields: Salary-->
         <div class="row-content" style="margin-top: 30px">
-          <label class="label text" for="salary">Choose Salary</label>
+          <label class="label text" for="salary">Choose Your Salary</label>
+
           <input
             class="input"
             type="range"
@@ -192,72 +201,79 @@
           />
           <output class="salary-output" for="salary">400000</output>
         </div>
-          <!-- Input fields: Date -->
-          <div class="row-content">
-            <label class="label text" for="date">Start Date</label>
-            <div>
-              <select id="day" name="Day">
-                <option>Day</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
-                <option value="26">26</option>
-                <option value="27">27</option>
-                <option value="28">28</option>
-                <option value="29">29</option>
-                <option value="30">30</option>
-                <option value="31">31</option>
-              </select>
-              <select id="month" name="Month">
-                <option>Month</option>
-                <option value="Jan">January</option>
-                <option value="Feb">February</option>
-                <option value="March">March</option>
-                <option value="April">April</option>
-                <option value="May">May</option>
-                <option value="June">June</option>
-                <option value="July">July</option>
-                <option value="Aug">August</option>
-                <option value="Sept">September</option>
-                <option value="Oct">October</option>
-                <option value="Nov">November</option>
-                <option value="Dec">December</option>
-              </select>
-              <select id="year" name="Year">
-                <option>Year</option>
-                <option value="2022">2022</option>
-                <option value="2021">2021</option>
-                <option value="2020">2020</option>
-                <option value="2019">2019</option>
-                <option value="2018">2018</option>
-                <option value="2017">2017</option>
-                <option value="2016">2016</option>
-              </select>
-            </div>
+        <!-- uc4 end -->
+
+        <!-- uc5 start -->
+        <div class="row-content">
+          <label class="label text" for="date">Start Date</label>
+          <div>
+            <select id="day" name="Day">
+              <option>Day</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+              <option value="11">11</option>
+              <option value="12">12</option>
+              <option value="13">13</option>
+              <option value="14">14</option>
+              <option value="15">15</option>
+              <option value="16">16</option>
+              <option value="17">17</option>
+              <option value="18">18</option>
+              <option value="19">19</option>
+              <option value="20">20</option>
+              <option value="21">21</option>
+              <option value="22">22</option>
+              <option value="23">23</option>
+              <option value="24">24</option>
+              <option value="25">25</option>
+              <option value="26">26</option>
+              <option value="27">27</option>
+              <option value="28">28</option>
+              <option value="29">29</option>
+              <option value="30">30</option>
+              <option value="31">31</option>
+            </select>
+            <select id="month" name="Month">
+              <option>Month</option>
+              <option value="Jan">January</option>
+              <option value="Feb">February</option>
+              <option value="March">March</option>
+              <option value="April">April</option>
+              <option value="May">May</option>
+              <option value="June">June</option>
+              <option value="July">July</option>
+              <option value="Aug">August</option>
+              <option value="Sept">September</option>
+              <option value="Oct">October</option>
+              <option value="Nov">November</option>
+              <option value="Dec">December</option>
+            </select>
+
+            <select id="year" name="Year">
+              <option>Year</option>
+              <option value="2022">2022</option>
+              <option value="2021">2021</option>
+              <option value="2020">2020</option>
+              <option value="2019">2019</option>
+              <option value="2018">2018</option>
+              <option value="2017">2017</option>
+              <option value="2016">2016</option>
+            </select>
+            <!-- uc10 -->
+            <error-output class="date-error" for="error"></error-output>
           </div>
-          <!-- Textarea -->
+        </div>
+        <!-- uc5 end -->
+
+        <!-- uc6 start -->
         <div class="row-content">
           <label class="label text" for="notes">Notes</label>
           <textarea
@@ -270,21 +286,23 @@
           </textarea>
         </div>
 
-        <!-- Buttons -->
         <div class="button-parent">
-          <a href="./index.html" class="resetButton button cancelButton"
+          <a href="./Home.html" class="resetButton button cancelButton"
             >Cancel</a
           >
+
           <div class="submit-reset">
             <button class="button submitButton" type="submit">Submit</button>
             <button type="reset" class="button resetButton">Reset</button>
           </div>
         </div>
+        <!-- uc6 end -->
       </form>
     </div>
     
-     <!-- External Javascript -->
-     <script type="text/javascript" src="../js/validator.js"></script>
-     <script type="text/javascript" src="../js/employeePayroll.js"></script>
+    <script type="text/javascript" src="../js/validator.js"></script>
+    <script type="text/javascript" src="../js/employeePayroll.js"></script>
+    <script type="text/javascript" src="../js/site_properties.js"></script>
+    <script type="text/javascript" src="../js/utility.js"></script>
   </body>
 </html>
