feat:Refactor the code

--- a/pages/Home.html
+++ b/pages/Home.html
@@ -17,7 +17,7 @@
   <body>
     <!-- uc1 -->
     <header class="header-content header">
-      <div class="logo-content" onclick="location.href='./Home.html'">
+      <div class="logo-content" >
         <img src="../assets/images/logo.png" alt="Logo" />
         <div>
           <span class="emp-text">EMPLOYEE</span><br />
@@ -52,7 +52,7 @@
               </tr>
               <tr>
                 <td><img class="profile" src="../assets/profile-images/Ellipse -2.png" alt=""></td>
-                <td>Rahul</td>
+                <td>Rahulprabu</td>
                 <td>Male</td>
                 <td>
                   <div class="dept-label">HR</div>
