--- a/pages/add-employee.html
+++ b/pages/add-employee.html
@@ -15,7 +15,7 @@
   <body>
     <!-- uc1 -->
     <header class="header-content header">
-      <div class="logo-content" onclick="location.href='./Home.html'">
+      <div class="logo-content" >
         <img src="../assets/images/logo.png" alt="Logo" />
         <div>
           <span class="emp-text">EMPLOYEE</span><br />
@@ -299,7 +299,7 @@
         <!-- uc6 end -->
       </form>
     </div>
-    
+    <!-- External Javascript -->
     <script type="text/javascript" src="../js/validator.js"></script>
     <script type="text/javascript" src="../js/employeePayroll.js"></script>
     <script type="text/javascript" src="../js/site_properties.js"></script>
